infra/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fraud-detection-api
  namespace: fraud-detection
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
    - host: fraud.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fraud-detection-api
                port:
                  number: 80
